@@ -13,7 +13,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/inventory")
@@ -28,52 +27,39 @@ public class InventoryController {
     @Autowired
     private InventoryMapper inventoryMapper;
 
+    // GET /api/inventory
     @GetMapping
     public ResponseEntity<List<InventoryResponseDTO>> getAllInventory() {
         List<InventoryResponseDTO> result = inventoryService.getAllInventory().stream()
                 .map(inventoryMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(result);
     }
 
+    // GET /api/inventory/{inventoryId}
     @GetMapping("/{inventoryId}")
     public ResponseEntity<InventoryResponseDTO> getInventoryById(@PathVariable Integer inventoryId) {
-        return ResponseEntity.ok(inventoryMapper.toResponseDTO(inventoryService.getInventoryById(inventoryId)));
+        return ResponseEntity.ok(
+                inventoryMapper.toResponseDTO(
+                        inventoryService.getInventoryById(inventoryId)
+                )
+        );
     }
 
-    @GetMapping("/by-store/{storeId}")
-    public ResponseEntity<List<InventoryResponseDTO>> getInventoryByStore(@PathVariable Integer storeId) {
-        List<InventoryResponseDTO> result = inventoryService.getInventoryByStore(storeId).stream()
-                .map(inventoryMapper::toResponseDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(result);
-    }
-
-    @GetMapping("/by-film/{filmId}")
-    public ResponseEntity<List<InventoryResponseDTO>> getInventoryByFilm(@PathVariable Integer filmId) {
-        List<InventoryResponseDTO> result = inventoryService.getInventoryByFilm(filmId).stream()
-                .map(inventoryMapper::toResponseDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(result);
-    }
-
+    // POST /api/inventory
     @PostMapping
     public ResponseEntity<InventoryResponseDTO> createInventory(@Valid @RequestBody InventoryRequestDTO dto) {
         Inventory inventory = inventoryMapper.toEntity(dto);
         inventory.setFilm(filmService.getFilmById(dto.getFilmId()));
         inventory.setStore(storeService.getStoreById(dto.getStoreId()));
-        return ResponseEntity.status(201).body(inventoryMapper.toResponseDTO(inventoryService.createInventory(inventory)));
+
+        Inventory saved = inventoryService.createInventory(inventory);
+
+        return ResponseEntity.status(201)
+                .body(inventoryMapper.toResponseDTO(saved));
     }
 
-    @PutMapping("/{inventoryId}")
-    public ResponseEntity<InventoryResponseDTO> updateInventory(@PathVariable Integer inventoryId,
-                                                                @Valid @RequestBody InventoryRequestDTO dto) {
-        Inventory existing = inventoryService.getInventoryById(inventoryId);
-        if (dto.getFilmId() != null) existing.setFilm(filmService.getFilmById(dto.getFilmId()));
-        if (dto.getStoreId() != null) existing.setStore(storeService.getStoreById(dto.getStoreId()));
-        return ResponseEntity.ok(inventoryMapper.toResponseDTO(inventoryService.updateInventory(inventoryId, existing)));
-    }
-
+    // DELETE /api/inventory/{inventoryId}
     @DeleteMapping("/{inventoryId}")
     public ResponseEntity<Void> deleteInventory(@PathVariable Integer inventoryId) {
         inventoryService.deleteInventory(inventoryId);
